--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,8 +42,9 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
@@ -54,15 +55,15 @@ dependencies {
     kapt "com.google.dagger:dagger-android-processor:2.15"
 
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
 
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
     implementation 'com.facebook.fresco:fresco:1.9.0'
     implementation 'com.orhanobut:logger:1.15'
 
-    implementation 'io.reactivex:rxandroid:1.2.0'
-    implementation 'io.reactivex:rxjava:1.1.8'
+    implementation 'io.reactivex:rxandroid:1.2.1'
+    implementation 'io.reactivex:rxjava:1.2.3'
     implementation 'com.annimon:stream:1.1.9'
 
     implementation 'com.jakewharton.rxbinding2:rxbinding-kotlin:2.1.1'
@@ -72,8 +73,8 @@ dependencies {
     implementation 'com.github.Zuluft:AutoAdapter:2.5'
     annotationProcessor 'com.github.Zuluft:AutoAdapter:2.5'
 
-    kapt "android.arch.persistence.room:compiler:1.1.0-beta2"
-    implementation 'android.arch.persistence.room:runtime:1.1.0-beta2'
-    implementation 'android.arch.persistence.room:rxjava2:1.1.0-beta2'
+    kapt "android.arch.persistence.room:compiler:1.1.1"
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
+    implementation 'android.arch.persistence.room:rxjava2:1.1.1'
 
 }
